# umkehr

./: .cproject  .gitignore  .project  Makefile  Makefile.in  README.md  _umkehr_if.pyd  build_manylinux_in_docker  build_windows64bit.bat  configure  configure.in  setup.py  setup.py.in  setup.py.windows  setup.py.windows.in
CompilerIDE/VS2015/umkehr_if/: .gitignore  ARGPython36.props  ARGPython37.props  fortran_umkehr_emulator.cpp  umkehr_if.sln  umkehr_if.vcxproj  umkehr_if.vcxproj.filters
CompilerIDE/VS2017/umkehr_if/: umkehr_if.sln
CompilerIDE/VS2017/umkehr_if/umkehr_if/: umkehr_if.c  umkehr_if.vcxproj  umkehr_if.vcxproj.filters
buildwheel/: .gitignore  generate_setup_py.bat  make_setup_py.bat  makewheel.bat  readme.txt  setup.py.in
data/: mk2v4cum.inp
docs/: Makefile  appendices.rst  conf.py  conf.py.in  index.rst  installation.rst  make.bat  operation.rst  umkehr_api.rst  umkehr_inputs.rst
examples/: 20091101.Dobson.Beck.119.JMA.csv  test.py  test_csvreader.py  testreader.py
m4/: ax_python.m4  numpyinclude.py  pythoninclude.py  pythonlib.py  pythonprefix.py  pythonsoextension.py  pythonversion.py
original/: README_FG.txt  README_OUT.txt  README_RT.txt  README_TABLES.txt  STN035.UM1  STN067.prn  akuprint.xls  fstguess.99b  newumkswfgztw_ak.f  test.ap  test.fr  test.out  test.prn  umk04.exx  umk04.f  umk04.for  umkv8.f  umout  uprint
original/instructions/: Fwd  Umkehr files and data.eml
python/: setup.py  setup.py.in
python/umkehr_if/: test.py
python/umkehr_if/testdata/: umknov09_intermediate.prn  umout
sources/: cimpl_emulator.f  decodev4.for  decodev4.inp  matinvn.f  sasco3.f  spline.f  stndrd.f  umkehr_common.fix  umkehr_driver.f  umkehr_if.cpp  umkehr_if.h  umkehr_interface.f  umkv8.f
sources/cpp-sources/: ctest.cpp  umkehr_if.cpp  umkehr_if.h  umkehr_if.i  umkehr_if_wrap.cxx  umkehr_io.cpp  umkehr_pythonif.h
sources/stand-alone-driver/: cimpl_emulator.f  umkehr_driver.f
testdata/: umknov09.jpn  umknov09_syowa.txt
umkehr/: process.py  umkehr_csv_io.py
umkehr/examples/: test_csvreader.py  test_umkehr.py
umkehr_if/: __init__.py  _umkehr_if.pyd  test.py  umkehr_if.py
umkehr_if/data/: std_pfl.asc
umkehr_if/testdata/: umknov09.out  umknov09.prn
wheelhouse/: umkehr-0.3.0-cp36-cp36m-manylinux1_x86_64.whl  umkehr-0.3.0-cp37-cp37m-manylinux1_x86_64.whl  umkehr-0.4.0-cp36-cp36m-manylinux1_x86_64.whl  umkehr-0.4.0-cp36-cp36m-win_amd64.whl  umkehr-0.4.0-cp37-cp37m-manylinux1_x86_64.whl  umkehr-0.5.0-cp36-cp36m-manylinux1_x86_64.whl  umkehr-0.5.0-cp36-cp36m-win_amd64.whl  umkehr-0.5.0-cp37-cp37m-manylinux1_x86_64.whl  umkehr-0.5.0-cp37-cp37m-win_amd64.whl  umkehr-0.6.0-cp34-cp34m-manylinux1_x86_64.whl  umkehr-0.6.0-cp35-cp35m-manylinux1_x86_64.whl  umkehr-0.6.0-cp36-cp36m-manylinux1_x86_64.whl  umkehr-0.6.0-cp36-cp36m-win_amd64.whl  umkehr-0.6.0-cp37-cp37m-manylinux1_x86_64.whl  umkehr-0.6.0-cp37-cp37m-win_amd64.whl
windowsbuild/: .gitignore  build_windows64bit.bat
woudc_umkcsv/: __init__.py  woudc_umkcsvpy3.py
